style.scss
$blue: #2b3467;
$red: #eb455f;
$lblue: #41a7e6;
$vlblue: #bad7e9;
$lgreen: #8de969;
$pgreen: #cbef43;
$green: #46ab1f;
$beige: #fcffe7;

* {
    box-sizing: border-box;
}

.font-chewy {
    font-family: "Chewy", cursive;
}

.font-rubik {
    font-family: "Rubik", sans-serif;
}

.font-comic {
    font-family: "Comic Neue", cursive;
}

.span-col-11 {
    grid-column: span 11 / auto;
    align-self: center;
}

body {
    margin: 0px;
}

header {
    margin: 30px 200px 140px 200px;
    height: 100px;
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-gap: 10px;

    .logo {
        width: auto;
        height: 150px;
    }

    .links {
        ul {
            list-style: none;
            text-align: right;
            margin: 0px;

            li {
                display: inline;
                margin-left: 60px;

                a {
                    text-decoration: none;
                    color: $blue;
                    font-size: 30px;

                    &:hover {
                        color: $red;
                    }
                }
            }
        }
    }
}

.enroll-btn {
    color: $beige;
    font-size: 30px;
    text-decoration: none;
    padding: 20px 60px;
    background-color: $red;
    box-shadow: -10px 10px $vlblue;
    transition: all 0.5s ease;

    &:hover {
        box-shadow: none;
        background-color: $blue;
    }
}

.jumbotron {
    height: 800px;
    background-image: url(./assets/webbigbg1.png);
    background-repeat: no-repeat;
    padding-left: 200px;
    background-position: right;
    background-size: contain;

    #mobilebg {
        display: none;
    }

    h1 {
        font-size: 79px;
        margin-top: 0px;
        color: $blue;
        font-weight: 100;
    }

    p {
        width: 600px;
        font-size: 35px;
        margin-bottom: 70px;
    }
}

#aboutus {
    margin-top: 50px;
    h1 {
        margin: 0px 200px 20px 200px;
        text-align: center;
        font-size: 90px;
        font-weight: 100;
        color: $blue;
    }

    .content{
        text-align: center;
        margin: auto;

        img{
            width: 700px;
            border-radius: 10px;
            box-shadow: 0px 4px 6px grey;
        }
    }

    p {
        margin: 0px 400px 20px 400px;
        text-align: center;
        font-size: 20px;
    }

    .subtitle{
        margin-top: 30px;
        font-style: italic;
        font-weight: 600;
    }
}

#activities {
    margin: 200px;

    h1 {
        text-align: center;
        font-size: 90px;
        font-weight: 100;
        color: $blue;
    }

    .activity-container {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        justify-content: space-evenly;
        gap: 10px;
        .activity-card {
            width: 250px;
            // flex-grow: 1;
            height: 300px;
            padding: 20px;
            text-align: center;
            border: 3px solid $vlblue;
            border-radius: 5px;
            img {
                width: 150px;
                height: 150px;
            }
            h2 {
                font-size: 25px;
                font-weight: 100;
                margin: 0px;
                color: $blue
            }
            p {
                font-size: 13px;
                margin: 0px;
            }
        }
    }
}

#contactus {
    h1 {
        font-size: 90px;
        text-align: center;
        font-weight: 100;
        color: $blue;
    }

    .address-holder {
        text-align: center;
        .map-link {
            img {
                width: 500px;
                border-radius: 5px;
                border: 5px solid $vlblue;
            }
        }

        .social-links-container {
            width: 500px;
            margin: 20px auto;

            display: flex;
            justify-content: space-between;

            img {
                width: 50px;
            }
        }

        .details {
            p {
                width: 500px;
                margin: 0px auto 20px auto;
                text-align: center;
            }

            div {
                display: flex;
                width: 500px;
                margin: auto;
                justify-content: space-between;
            }

            a {
                font-size: 20px;
                text-decoration: none;
                color: $blue;
                font-weight: bold;

                &:hover {
                    color: $red;
                }
            }
        }
    }
}

footer {
    height: 50px;
    margin-top: 30px;

    background-color: $blue;
    display: flex;
    justify-content: center;
    align-items: center;

    a {
        color: white;
        text-decoration: none;
        &:hover {
            color: $vlblue;
        }
    }
}

//Web small
@media screen and (min-width: 1280px) and (max-width: 1919px) {
    
}

//tablet
@media screen and (min-width: 768px) and (max-width: 1279px) {
    header {
        margin: 30px 50px 100px 50px;
        height: 65px;
        .logo {
            height: 100px;
        }

        .links {
            ul {
                li {
                    margin-left: 25px;

                    a {
                        font-size: 20px;
                    }
                }
            }
        }
    }

    .jumbotron {
        height: 480px;
        background-image: url(./assets/tabletbg1.png);
        padding-left: 50px;

        h1 {
            font-size: 40px;
        }

        p {
            width: 400px;
            font-size: 25px;
            margin-bottom: 40px;
        }
    }

    #aboutus {
        h1 {
            margin: 0px 50px 20px 50px;
            font-size: 50px;
        }

        p {
            margin: 0px 50px 20px 50px;
            font-size: 20px;
        }
    }

    #activities {
        margin: 50px;

        h1 {
            font-size: 50px;
        }
    }
}

//mobile
@media screen and (max-width: 767px) {
    header {
        margin: 50px 10px 50px 10px;
        height: 50px;
        .logo {
            height: 75px;
        }

        .links {
            ul {
                li {
                    margin-left: 20px;

                    a {
                        font-size: 15px;
                    }
                }
            }
        }
    }

    .jumbotron {
        height: auto;
        background-image: none;
        padding: 0px;
        margin: 0px 10px;

        h1 {
            text-align: center;
            font-size: 30px;
        }

        p {
            text-align: center;
            width: auto;
            font-size: 20px;
            margin-bottom: 40px;
        }

        .btn-container {
            text-align: center;
        }

        #mobilebg {
            display: block;
            width: auto;
            margin-top: 30px;
            text-align: center;
            img {
                width: 90%;
            }
        }
    }

    #aboutus {
        h1 {
            margin: 0px 10px 20px 10px;
            font-size: 30px;
        }

        .content{
            img{
                width: 250px;
            }
        }

        p {
            margin: 0px 10px 20px 10px;
            font-size: 13px;
        }
    }

    #activities {
        margin: 10px;

        h1 {
            font-size: 30px;
        }
    }

    #contactus {
        h1 {
            font-size: 30px;
            text-align: center;
            font-weight: 100;
            color: $blue;
        }

        .address-holder {
            text-align: center;
            .map-link {
                img {
                    width: 250px;
                    border-radius: 5px;
                    border: 5px solid $vlblue;
                }
            }

            .social-links-container {
                width: 250px;
                margin: 20px auto;

                display: flex;
                justify-content: space-between;

                img {
                    width: 50px;
                }
            }

            .details {
                p {
                    width: 250px;
                    margin: 0px auto 20px auto;
                    text-align: center;
                }

                div {
                    display: flex;
                    width: 250px;
                    margin: auto;
                    justify-content: space-between;
                }

                a {
                    font-size: 15px;
                    text-decoration: none;
                    color: $blue;
                    font-weight: bold;

                    &:hover {
                        color: $red;
                    }
                }
            }
        }
    }
}

